# rust-todos

./: Cargo.toml  docker-compose.yaml
bruno-requests/: bruno.json  complete todo.bru  create todo.bru  get todo.bru  get todos.bru
migrations/: 20250414154457_todos.sql
src/: main.rs
src/model/: todo.rs
src/repository/: todo.rs
src/routes/: todos.rs
