[package]
name = "rust-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
dotenv = "0.15.0"
